apps/audiobookshelf/ingress/templates/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: audiobookshelf-route
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-gateway
  hostnames:
   - "audiobookshelf.tomekz.party"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: audiobookshelf
      port: 80
